--- a/pagestructure.html
+++ b/pagestructure.html
@@ -4,8 +4,15 @@
             <meta charset="utf-8"/>
             <style>
             h1 {color: crimson;}
+            p
+            {
+                width: 300px;
+                height: 100px;
+                background-color: crimson;
+                border: 1px solid black;
+                transform: matrix(1.5, 0.1, 0.5, 1, 150, 0);
+            }
             </style>
-            <base href="F:\year 2\web design\work\" target="_blank">
             <title>
                 My Page 2 Electrical boogaloo 
             </title>
@@ -15,5 +22,6 @@
         <li><a href="link1.html">Home</a></li>
         <h1>style is a peice of code that will allow you to change the colour of text</h1>
         <h2><img src="handy.jfif" width="68" height="89" alt="handy"> base can be used to show the web page to look for all images making it easyer when you use the img tag</h2>
+        <p>matrix is used for when you want to free transfor text. </p>
     </body>
 </html>
